fix beer chart dark mode

--- a/source/css/style-dark.styl
+++ b/source/css/style-dark.styl
@@ -1,2 +1,6 @@
 @import "_colors/dark"
 @import "_style"
+
+.beer-chart{
+  filter: invert(0%);
+}
